[tool.poetry]
name = "METERS_1"
version = "0.1.0"
description = "pH and Flow meters"
authors = ["Rob Knighton <rob.knighton10@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
brewblox-service = "^0.25.0"
poetry = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest-flake8 = "^1.0.4"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
pytest-aiohttp = "^0.3.0"
flake8 = "^3.7.9"
autopep8 = "^1.5"
pytest = "^5.4.1"
flake8-quotes = "^3.0.0"
aresponses = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
